@@ -32,6 +32,9 @@ Detailed Change List
 New Features
 ----------------------
 
+* SOLR-7241, SOLR-7263, SOLR-7279: More functionality moving the Admin UI to Angular JS
+  (Upayavira via Erick)
+
 Bug Fixes
 ----------------------
 
